<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.hjq.bar.TitleBar
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:barStyle="transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:leftHorizontalPadding="16dp"
            app:leftIcon="@mipmap/common_icon_back_purple"
            app:lineVisible="false"
            app:titleIcon="@mipmap/common_icon_title_logoff"
            app:titleColor="@color/color_313133"
            app:titleSize="18sp"
            app:titleStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/setting_request_log_off_account"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp">

            <View
                android:layout_width="6dp"
                android:layout_height="6dp"
                app:bl_corners_radius="6dp"
                android:layout_marginTop="5dp"
                app:bl_solid_color="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/setting_log_off_account_tips1"
                android:textColor="@color/white"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp">

            <View
                android:layout_width="6dp"
                android:layout_height="6dp"
                app:bl_corners_radius="6dp"
                android:layout_marginTop="5dp"
                app:bl_solid_color="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/setting_log_off_account_tips2"
                android:textColor="@color/white"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp">

            <View
                android:layout_width="6dp"
                android:layout_height="6dp"
                app:bl_corners_radius="6dp"
                android:layout_marginTop="5dp"
                app:bl_solid_color="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/setting_log_off_account_tips3"
                android:textColor="@color/white"
                android:textSize="13sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp">

            <View
                android:layout_width="6dp"
                android:layout_height="6dp"
                app:bl_corners_radius="6dp"
                android:layout_marginTop="5dp"
                app:bl_solid_color="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/setting_log_off_account_tips4"
                android:textColor="@color/white"
                android:textSize="13sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            commonBtnState="@{true}"
            android:text="@string/setting_log_off_account_submit"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</layout>