<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="m"
            type="com.kissspace.android.viewmodel.SendSmsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.hjq.bar.TitleBar
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:barStyle="transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:leftHorizontalPadding="16dp"
            app:leftIcon="@mipmap/common_icon_back_purple"
            app:lineVisible="false"
            app:titleIcon="@mipmap/app_icon_title_bind_phone" />

        <LinearLayout
            android:id="@+id/ll_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:bl_corners_radius="8dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:bl_solid_color="@color/color_1A000000">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:text="@string/setting_phone_number"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="110dp"
                    android:background="@null"
                    android:hint="@string/setting_bind_phone_number_hint"
                    android:inputType="number"
                    android:lines="1"
                    android:textCursorDrawable="@drawable/common_edit_cursor"
                    android:maxLength="11"
                    android:textColor="@color/white"
                    android:textColorHint="@color/color_80FFFFFF"
                    android:textSize="16sp" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@color/color_33E5E5E5" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:text="@string/setting_sms_code"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvGetCode"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:gravity="center"
                    android:text="@string/setting_get_sms_code"
                    android:enabled="@{m.sendSmsBtnEnable}"
                    android:textColor="@drawable/common_sendsms_selector"
                    android:textSize="14sp" />


                <EditText
                    android:id="@+id/et_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="110dp"
                    android:layout_toStartOf="@id/tvGetCode"
                    android:background="@null"
                    android:hint="@string/setting_sms_code_hint"
                    android:inputType="number"
                    android:maxLength="4"
                    android:textCursorDrawable="@drawable/common_edit_cursor"
                    android:textColor="@color/white"
                    android:textColorHint="@color/color_80FFFFFF"
                    android:textSize="16sp" />
            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_confirm"
            commonBtnState="@{m.btnEnable}"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/setting_confirm"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </LinearLayout>
</layout>